# ToDoApp-FastAPI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
dailydo_todo_app/: README.md  main.py  settings.py
tests/: README.md  test_main.py
